# Questionnaire-Insertion

./: .env  Cargo.toml  README.md  clean_excel.py  find_skipped_rows.py  question_data.xlsx  question_data_cleaned.xlsx
src/: db.rs  excel.rs  main.rs
src/insert/: answer.rs  kit.rs  kit_questionnaire.rs  mod.rs  parent_question.rs  question.rs  questionnaire.rs  questionnaire_group.rs  questionnaire_version.rs  test.rs  user.rs
src/schemas/: kit_questionnaire.rs  mod.rs  questionnaire.rs  questionnaire_version.rs
