[package]
name = "questionnaire_importer"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.18"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "chrono", "runtime-tokio-native-tls", "time"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
anyhow = "1.0"
dotenv = "0.15"